# tactile

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
docs/decisions/: README.md
docs/decisions/specs/: 2026-07-08-touchtype-tui-design.md
docs/engineering/: curriculum.md  development.md  engine.md  layouts.md  overview.md  progress.md  release.md  testing.md  tui-screens.md
docs/project/: brief.md  pytest.md  textual.md  uv.md
docs/reference/: cli.md  keybinds.md  progress-schema.md
docs/superpowers/plans/: 2026-07-08-touchtype-tui.md
openspec/: config.yaml
openspec/changes/: .gitkeep
openspec/changes/archive/: .gitkeep
openspec/changes/curriculum-expansion/: exploration.md  proposal.md
openspec/changes/ux-improvements/: exploration.md  proposal.md  tasks.md
openspec/specs/: .gitkeep
openspec/specs/centered-layout/: spec.md
scripts/: validate_docs.py
src/tactile/: __init__.py  __main__.py  app.py  codeload.py  curriculum.py  engine.py  progress.py  styles.tcss  widgets.py
src/tactile/layouts/: en_us.py  (+2 more)
src/touchtype/: __init__.py  __main__.py  app.py  codeload.py  curriculum.py  engine.py  progress.py  styles.tcss  widgets.py
tests/: test_app.py  test_centered_layout.py  test_cli.py  test_codeload.py  test_curriculum.py  test_engine.py  test_layouts.py  test_practice_flow.py  test_progress.py  test_text_size.py
(+20 files in other folders)
