[project]
name = "touchtype"
version = "0.1.0"
description = "A Textual-based TUI touch-typing trainer"
readme = "README.md"
authors = [
    { name = "Brandom Ledesma", email = "brandom.ledesma@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.60",
]

[project.scripts]
touchtype = "touchtype.__main__:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
